[FIX][UI] Contrast problem in United theme login popup mode links (now same as in module mode). Thanks, Marc.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/15.x@61586 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/united/less/united.less
+++ b/themes/united/less/united.less
@@ -17,3 +17,5 @@
 @import "../../base_files/less/tiki-selectors.less";
 // Tiki non-Bootstrap CSS selectors related to color
 @import "../../base_files/less/tablesorter-custom.less";
+
+.siteloginbar_poppedup .list-unstyled li { background: none !important; }
